Enviando y actualizando foto de perfil

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <figure class="Header-imageContainer">
                 <img src="images/avatar.jpg" alt="Imagen personal" class="Header-image"/>
                 <figcaption class="Header-imageDescription">
-                    <a class="Header-link" href="http://twitter.com/leonidasesteban/" target="_black">@LeonidasEsteban</a>
+                    <a class="Header-link" href="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xfp1/v/t1.0-1/c52.0.200.200/p200x200/10390476_10202676944300228_6401680406452749729_n.jpg?oh=c5a1a80ed3c90d2147201695745d2279&oe=5540F1F0&__gda__=1428972001_d4ae9bc8b71411b202c986e0c3fd2f4f" target="_black">@RaulAdrianGA</a>
                 </figcaption>
             </figure>
             <p class="Header-name" >Leonidas Esteban</p>
