--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <figure class="Header-imageContainer">
                 <img src="images/avatar.jpg" alt="Imagen personal" class="Header-image"/>
                 <figcaption class="Header-imageDescription">
-                    <a class="Header-link" href="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xfp1/v/t1.0-1/c52.0.200.200/p200x200/10390476_10202676944300228_6401680406452749729_n.jpg?oh=c5a1a80ed3c90d2147201695745d2279&oe=5540F1F0&__gda__=1428972001_d4ae9bc8b71411b202c986e0c3fd2f4f" target="_black">@RaulAdrianGA</a>
+                    <a class="Header-link" href="http://twitter.com/rauladrianga/" target="_black">@RaulAdrianGA</a>
                 </figcaption>
             </figure>
             <p class="Header-name" >Leonidas Esteban</p>
@@ -39,9 +39,9 @@
                 <p class="Profile-description">
                     <strong>Hola!</strong> si <span class="Profile-span">llegaste</span> hasta aqui puedes ver mi portafolio y <em>contactarme</em>
                 </p>
-                <a class="Profile-link" href="http://twitter.com/leonidasesteban/" target="_blank">@LeonidasEsteban</a>
-                <a class="Profile-link" href="http://facebook.com/leonidasesteban/" target="_blank">Leonidas Esteban</a>
-                <a class="Profile-link" href="http://github.com/leonidasesteban/" target="_blank">LeonidasEsteban</a>
+                <a class="Profile-link" href="http://twitter.com/rauldrianga/" target="_blank">@RaulAdrianGA</a>
+                <a class="Profile-link" href="http://facebook.com/rauldrianga/" target="_blank">Raúl González</a>
+                <a class="Profile-link" href="http://github.com/rauldrianga/" target="_blank">RaulGonzález</a>
             </div>
         </section>
         <section id="trabajo" class="Work">
