me equivoque en mi github, corregido

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </p>
                 <a class="Profile-link" href="http://twitter.com/rauldrianga/" target="_blank">@RaulAdrianGA</a>
                 <a class="Profile-link" href="http://facebook.com/rauldrianga/" target="_blank">Raúl González</a>
-                <a class="Profile-link" href="http://github.com/rauldrianga/" target="_blank">RaulGonzález</a>
+                <a class="Profile-link" href="http://github.com/rauladrianga/" target="_blank">RaulGonzález</a>
             </div>
         </section>
         <section id="trabajo" class="Work">
