--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <p class="Profile-description">
                     <strong>Hola!</strong> si <span class="Profile-span">llegaste</span> hasta aqui puedes ver mi portafolio y <em>contactarme</em>
                 </p>
-                <a class="Profile-link" href="http://twitter.com/rauldrianga/" target="_blank">@RaulAdrianGA</a>
-                <a class="Profile-link" href="http://facebook.com/rauldrianga/" target="_blank">Raúl González</a>
+                <a class="Profile-link" href="http://twitter.com/rauladrianga/" target="_blank">@RaulAdrianGA</a>
+                <a class="Profile-link" href="http://facebook.com/rauladrianga/" target="_blank">Raúl González</a>
                 <a class="Profile-link" href="http://github.com/rauladrianga/" target="_blank">RaulGonzález</a>
             </div>
         </section>
