--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
             </nav>
             <figure class="Header-imageContainer">
-                <img src="images/avatar.jpg" alt="Imagen personal" class="Header-image"/>
+                <img src="images/avatar.jpg" alt="Imagen personal" class="Header-image" width=300px height=300px />
                 <figcaption class="Header-imageDescription">
                     <a class="Header-link" href="http://twitter.com/rauladrianga/" target="_black">@RaulAdrianGA</a>
                 </figcaption>
@@ -40,8 +40,8 @@
                     <strong>Hola!</strong> si <span class="Profile-span">llegaste</span> hasta aqui puedes ver mi portafolio y <em>contactarme</em>
                 </p>
                 <a class="Profile-link" href="http://twitter.com/rauladrianga/" target="_blank">@RaulAdrianGA</a>
-                <a class="Profile-link" href="http://facebook.com/rauladrianga/" target="_blank">Raúl González</a>
-                <a class="Profile-link" href="http://github.com/rauladrianga/" target="_blank">RaulGonzález</a>
+                <a class="Profile-link" href="http://facebook.com/rauladrianga/" target="_blank">FB:Raúl González</a>
+                <a class="Profile-link" href="http://github.com/rauladrianga/" target="_blank">GH:RaulGonzález</a>
             </div>
         </section>
         <section id="trabajo" class="Work">
