Esperemos que sí

--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
                     </li>
                     <li class="MainMenu-item">
                         <a class="MainMenu-link" href="#contacto">Contacto</a>
-                    </li>
+                    </li>git
                 </ul>
             </nav>
             <figure class="Header-imageContainer">
-                <img src="images/avatar.jpg" alt="Imagen personal" class="Header-image" width=300px height=300px />
-                 <img src="images/jessy.jpg" alt="Imagen personal" class="Header-image" width=300px height=300px />
+                <img src="images/avatar.jpg" alt="Imagen personal" class="Header-image" width=301px height=300px />
                 <figcaption class="Header-imageDescription">
                     <a class="Header-link" href="http://twitter.com/rauladrianga/" target="_black">@RaulAdrianGA</a>
                 </figcaption>
