--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </nav>
             <figure class="Header-imageContainer">
                 <img src="images/avatar.jpg" alt="Imagen personal" class="Header-image" width=300px height=300px />
+                <figcaption class="Header-imageDescription">
                     <a class="Header-link" href="http://twitter.com/rauladrianga/" target="_black">@RaulAdrianGA</a>
                 </figcaption>
             </figure>
