--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="Header-link" href="http://twitter.com/rauladrianga/" target="_black">@RaulAdrianGA</a>
                 </figcaption>
             </figure>
-            <p class="Header-name" >Raúl</p>
+            <p class="Header-name" >Raúl González</p>
         </header>
         <section id="perfil" class="Profile">
             <div class="u-containerDefault">
